fixes overflow and header

--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -517,7 +517,7 @@
     }
 
     #sticky-header.sticky-menu {
-        /* margin: 0 !important; */
+        padding: 22px !important;
     }
 
     .custom-container,
